force a vertical scrollbar to prevent a jumpy page

--- a/src/css/reset/_reset.scss
+++ b/src/css/reset/_reset.scss
@@ -12,10 +12,10 @@ main, article, aside, figure, figcaption, footer, header, nav, section, details,
 
 /* Handle box-sizing while better addressing child elements:
    http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
+/* force a vertical scrollbar to prevent a jumpy page */
 html {
   box-sizing: border-box;
-  overflow-y: auto;
-
+  overflow-y: scroll;
   -ms-text-size-adjust:100%;
   -webkit-text-size-adjust:100%;
   text-rendering:optimizeLegibility;
@@ -24,8 +24,8 @@ html {
   line-height: 1.15;
 }
 
-body.rtl{direction:rtl;overflow-x:hidden;font-family:$fontNameFa;}
-body.ltr{direction:ltr;overflow-x:hidden;font-family:$fontNameEn;}
+body.rtl{direction:rtl;font-family:$fontNameFa;}
+body.ltr{direction:ltr;font-family:$fontNameEn;}
 
 
 *,
